@@ -1,0 +1,6 @@
+<header>Files and directories to skip</header>
+
+This field can be used to enter a list of space-separated filenames to exclude from the backup. You can also enter full paths like <tt>/etc/passwd</tt>, or shell patterns like <tt>*.tmp</tt>. <p>
+
+<footer>
+
